[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
name = "things-cloud"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/m1guelpf/things-cloud-api"
description = "An unofficial API client for the Things Cloud API. Work in progress."

[dependencies]
thiserror = "1.0.56"
serde_repr = "0.1.18"
serde_json = "1.0.111"
async-recursion = "1.0.5"
serde_path_to_error = "0.1.15"
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros"] }
